# libwish

./: CMakeLists.txt  LICENSE  README.md
data/: caps.txt
include/: wish.h
scripts/: gen_caps
src/: attr.c  buffer.c  caps.c  clear.c  cursor.c  draw.c  frame.c  init.c  print.c  read.c  size.c  unicode.c  view.c  wish_buffer.h  wish_caps.h  wish_frame.h  wish_term.h  wish_view.h
